# mars

./: CMakeLists.txt
data/: menubar.ui  menubar.xml  resources.xml
src/: CMakeLists.txt
src/app/: CMakeLists.txt  app.cpp  app.hpp  main.cpp
src/app/ui/: main_window.cpp  main_window.hpp
src/base/: log.hpp
src/main/: main.cpp
